Updates to resolve styling issues on mobile and to remove content not yet ready

--- a/wp-content/themes/omahabeerweek/sass/partials/_media.scss
+++ b/wp-content/themes/omahabeerweek/sass/partials/_media.scss
@@ -27,13 +27,13 @@
 				right: 0px;
 				padding: 0 0 0 15px;
 				height: 45px;
-				background: #f0e7c9;
+				background: #394e25;
 				overflow: hidden;
 				@include transition-property(height);
   				@include transition-duration(0.5s);
 
 				&.open {
-					height: 255px;
+					height: 205px;
 
 					.arrow {
 						@include rotate(180deg);
@@ -67,7 +67,7 @@
 				}
 
 				#selected-page {
-					padding: 9px 30px 0 0;
+					padding: 11px 30px 3px 0;
 				}
 			}
 		}
@@ -75,16 +75,7 @@
 		div.logo {
 			left: 5px;
 			width: 72px;
-			height: 77px;
-			// background: transparent url('./images/logo-640.png') no-repeat;
-			// background-size: cover;
-
-			// a {
-			// 	padding: 0;
-			// 	width: 100%;
-			// 	height: 100%;
-			// 	display: block;
-			// }
+			height: 72px;
 		}
 	}
 
@@ -123,18 +114,16 @@
 		#celebrating {
 			margin: 0 auto 30px;
 			padding-top: 50px;
-			font-family: 'freestyle_script_stdregular';
+			font-family: 'Alfa Slab One';
 
 			h1 {
-				font-size: 2.9em;
-				text-shadow: 0px 4px 0px #000000;
-				filter: dropshadow(color=#000000, offx=0, offy=4);
+				font-size: 1.9em;
+                @include text-shadow(0px 3px 0px rgba(0, 0, 0, 1));
 			}
 			h2 {
-				font-size: 2.3em;
-				text-shadow: 0px 2px 0px #000000;
-				filter: dropshadow(color=#000000, offx=0, offy=2);
-				line-height: 0.9em;
+				font-size: 1.2em;
+                @include text-shadow(0px 3px 0px rgba(0, 0, 0, 1));
+				line-height: 1.2em;
 			}
 		}
 
